@@ -1,3 +1,11 @@
+lxqt-archiver-0.5.0 / 2021-11-04
+===================================
+ * Bumped minimum required Qt version to 5.15.
+ * Show password prompt for archives with encrypted lists.
+ * Added milliseconds to name of temporary extraction folder.
+ * Removed a duplicate assignment.
+ * Fixed listing RAR archive contents with encrypted file list.
+
 lxqt-archiver-0.4.0 / 2021-04-15
 ===================================
   * Support opening and extracting of disk images.
